--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
+#header {
+  align-items: center;
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: center;
+}
+
 #navbar {
   width: 100%;
   height: 50px;
@@ -5,6 +12,17 @@
   color: gray;
   align-items: center;
   justify-content: space-evenly;
+}
+
+#campuses {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+#image {
+  width: 400px;
+  height: 400px;
 }
 
 .row {
