--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,21 @@
-#background {
+* {
+  /* box-sizing: border-box; */
+}
+
+main::before {
+  content: "";
+  pointer-events:none;
   background-image: url("https://garden.spoonflower.com/c/13539540/p/f/l/SywS69iSWergzd1_RVExsch951jZBSgeaCxKB8d_2QtuGOqL1CRr/Witchy%20Things%20in%20Black%20and%20White%20.jpg");
   opacity: 0.2;
+  background-size: contain;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  position: absolute;
+  height: 375vh;
+  width: 200vh;
+  /* background-repeat: repeat repeat; */
 }
 
 #header {
@@ -8,18 +23,19 @@
   display: flex;
   /* flex-direction: row; */
   justify-content: center;
-  /* background-image: url("https://garden.spoonflower.com/c/13539540/p/f/l/SywS69iSWergzd1_RVExsch951jZBSgeaCxKB8d_2QtuGOqL1CRr/Witchy%20Things%20in%20Black%20and%20White%20.jpg"); */
-  /* opacity: 0.2; */
-  color: black
+  color: black;
+  position: relative;
 }
 
 #navbar {
   width: 100%;
   height: 50px;
   background-color: #eee;
-  color: gray;
+  color: black;
   align-items: center;
   justify-content: space-evenly;
+  position: relative;
+  opacity: 1
 }
 
 .campuses {
@@ -27,8 +43,8 @@
   display: flex;
   flex-direction: column;
   opacity: 1.0;
-  z-index: -1;
   margin-bottom: 15px;
+  position: relative;
   /* margin: 5%; */
 }
 
@@ -37,24 +53,24 @@
   display: flex;
   flex-direction: column;
   opacity: 1.0;
-  z-index: -1;
   margin-bottom: 15px;
+  position: relative;
   /* margin: 5%; */
 }
 
 #students {
-  border-image: url("https://garden.spoonflower.com/c/13539540/p/f/l/SywS69iSWergzd1_RVExsch951jZBSgeaCxKB8d_2QtuGOqL1CRr/Witchy%20Things%20in%20Black%20and%20White%20.jpg");
   align-items: center;
   display: flex;
   flex-direction: column;
   opacity: 1.0;
-  z-index: -1;
   margin: 3rem;
+  position: relative;
 }
 
 #image {
   width: 400px;
   height: 400px;
+  opacity: 1;
 }
 
 .row {
@@ -79,4 +95,8 @@
 
 .bold {
   font-weight: bolder;
+}
+
+.link {
+  font-size:larger;
 }
